# cursor-termux-bridge

./: .gitignore  ACCESO_REMOTO.md  CONFIGURAR_ENV.md  CONFIGURAR_IA.md  CONFIGURAR_OLLAMA_RAPIDO.md  CONFIGURAR_TERMUX.md  CURSOR_DIRECTO.md  CURSOR_VS_SISTEMA_ACTUAL.md  DIAGNOSTICO_TIMEOUT.md  GITHUB_SETUP.md  GUIA_RAPIDA_OLLAMA.md  INICIO_SERVIDOR.md  INTEGRACION_INTELIGENTE.md  INTEGRAR_CURSOR_IA.md  MODELOS_DISPONIBLES.md  MODELOS_GRATUITOS.md  MODELOS_RECOMENDADOS.md  PROBAR_IA.md  PROBAR_OLLAMA.md  PRUEBAS.md  QUICKSTART.md  README.md  SOLUCION_ERROR_MODELO.md  SOLUCION_SIN_TERCEROS.md  SOLUCION_TIMEOUT.md  SOLUCION_TIMEOUT_TERMUX.md  USO_CODIGO_TIEMPO_REAL.md  VERIFICAR_SERVIDOR.md  VER_RESPUESTAS.md  cambiar_modelo.ps1  configurar_ollama.ps1  configurar_openai.ps1  configurar_termux.sh  deploy.sh  deploy_to_github.md  diagnostico_conexion.md  fix_variables_termux.sh  iniciar_servidor.bat  instalar_dependencias_termux.sh  listar_modelos.ps1  (+8 more)
agent-server/: pyproject.toml
agent-server/src/bridge_server/: agent.py  audit.py  config.py  llm.py  main.py  models.py  policy.py  rpc.py  telemetry.py  validators.py
agent-server/src/bridge_server/tools/: __init__.py  filesystem.py  git_tools.py  router.py  search.py  shell_tool.py
agent-server/tests/: test_policy.py  test_rpc.py  test_validators.py
config/: env.example  generar_token.py  nanorc.example  setup_server.sh  setup_termux.sh
docs/: architecture.md  github_publish.md  (+4 more)
termux-client/: pyproject.toml
termux-client/src/bridge_cli/: client.py  main.py  render.py
termux-client/tests/: test_main_import.py
(+13 files in other folders)
