[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-codexbridge-client"
version = "0.1.0"
description = "Termux CLI client for GPT-CodexBridge"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "typer>=0.16.0",
  "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.12.0",
]

[project.scripts]
bridge = "bridge_cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
